--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,8 @@
         <%= link_to "Languages", languages_path %></li>
         <li <%= "class=active" if yield(:title) == "New link" %>>
         <%= link_to "New link", new_link_path %></li>
+        <li <%= "class=active" if yield(:title) == "Public lists" %>>
+        <%= link_to "Public lists", public_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
