--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,8 @@
         <%= link_to "New link", new_link_path %></li>
         <li <%= "class=active" if yield(:title) == "Public lists" %>>
         <%= link_to "Public lists", public_path %></li>
+        <li <%= "class=active" if yield(:title) == "Groups" %>>
+        <%= link_to "Groups", groups_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
