--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,8 +4,8 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 	  <%= form_for @registration do |f| %>
-	    <%= label_tag :name %>
-		<input type="text" class="form-control">
+	    <%= label_tag :name, "Name" %>
+			<%= text_field_tag :name, nil, class: 'form-control' %>
 		
 	    <%= f.label :email %>
 	    <%= f.text_field :email, class: 'form-control' %>
